--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,13 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     testCompile 'junit:junit:4.12'
+    compile 'android.arch.lifecycle:runtime:1.0.0-alpha5'
+    compile 'android.arch.lifecycle:extensions:1.0.0-alpha5'
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha5"
+    compile 'android.arch.persistence.room:runtime:1.0.0-alpha5'
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha5"
+    testCompile 'android.arch.persistence.room:testing:1.0.0-alpha5'
+    compile 'android.arch.persistence.room:rxjava2:1.0.0-alpha5'
+    compile files('libs/ormlite-android-5.0.jar')
+    compile files('libs/ormlite-core-5.0.jar')
 }
